[gd_scene load_steps=6 format=3 uid="uid://cnjbs1wmik27m"]

[ext_resource type="Script" path="res://scene/clicker_base.gd" id="1_lwccy"]
[ext_resource type="PackedScene" uid="uid://cd8g83exwpt5d" path="res://scene/Enviroment/enviroment.tscn" id="2_ecjv1"]
[ext_resource type="Texture2D" uid="uid://dk5h7rtywk7b0" path="res://Sprites/Enemies/Duck/Fall (36x36).png" id="3_rvxid"]
[ext_resource type="Texture2D" uid="uid://cq5h4k1uk6iuw" path="res://Sprites/Character/Herrero/PNG Sequences/Idle Blinking/0_Blacksmith_Idle Blinking_000.png" id="25_lh6x2"]
[ext_resource type="Texture2D" uid="uid://coc87ssu2ywwf" path="res://Sprites/Character/Herrero/PNG Sequences/Idle Blinking/0_Blacksmith_Idle Blinking_029.png" id="26_uv08g"]

[node name="ClickerBase" type="Node"]
script = ExtResource("1_lwccy")

[node name="Enviroment" parent="." instance=ExtResource("2_ecjv1")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="LabelClick" type="Label" parent="."]
offset_left = 64.0
offset_top = 798.0
offset_right = 167.0
offset_bottom = 821.0
size_flags_horizontal = 4
text = "(ClickTotales)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelClickPerSecon" type="Label" parent="."]
offset_left = 65.0
offset_top = 832.0
offset_right = 194.0
offset_bottom = 855.0
size_flags_horizontal = 4
text = "(ClickPerSecond)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mejora_X_Click" type="Button" parent="."]
offset_left = 511.0
offset_top = 784.0
offset_right = 704.0
offset_bottom = 828.0
text = "Mejora  +1 x click
"
icon = ExtResource("3_rvxid")

[node name="CostXclick" type="Label" parent="."]
offset_left = 512.0
offset_top = 833.0
offset_right = 705.0
offset_bottom = 856.0
text = "(costo)"
horizontal_alignment = 1
justification_flags = 162

[node name="Mejora 1" type="Button" parent="."]
offset_left = 64.0
offset_top = 906.0
offset_right = 140.0
offset_bottom = 937.0
text = "Mejora 1"

[node name="Mejora 2" type="Button" parent="."]
offset_left = 65.0
offset_top = 976.0
offset_right = 141.0
offset_bottom = 1007.0
text = "Mejora 2
"

[node name="Cost" type="Label" parent="."]
offset_left = 64.0
offset_top = 937.0
offset_right = 175.0
offset_bottom = 968.0
text = "(costo Mejora)"
horizontal_alignment = 1

[node name="Cost2" type="Label" parent="."]
offset_left = 63.0
offset_top = 1009.0
offset_right = 174.0
offset_bottom = 1040.0
text = "(costo mejora)"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -776.0
offset_right = 81.0
offset_bottom = -506.0
grow_horizontal = 2
grow_vertical = 0
size_flags_stretch_ratio = 0.0
action_mode = 0
texture_normal = ExtResource("25_lh6x2")
texture_pressed = ExtResource("26_uv08g")
ignore_texture_size = true
stretch_mode = 0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Mejora_X_Click" to="." method="_on_mejora_x_click_pressed"]
[connection signal="pressed" from="Mejora 1" to="." method="_on_mejora_1_pressed"]
[connection signal="pressed" from="Mejora 2" to="." method="_on_mejora_2_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
